# PBA_Analysis_Tools

./: .clang-format  .gitignore  CMakeLists.txt  README.md  basic_capstone_linear.cpp  basic_capstone_recursive.cpp  capstone_gadget_finder.cpp  disassembler.cpp  elfinject.c  loader_demo.cpp  makefile  xor_encrypt.c
Generic_Unpacker/: unpacker.h
inc/: loader.h
loader/: loader.cpp
tester/: tester.cpp
